--- a/templates/rooms.html
+++ b/templates/rooms.html
@@ -32,32 +32,38 @@
             <div class="col-md-2">
                 <label class="form-label">寝室号</label>
                 <input type="text" class="form-control" name="room_id"
-                       value="{{ request.args.get('room_id', '') }}"
+                       value="{{ room_id_filter }}"
                        placeholder="寝室号">
+            </div>
+            <div class="col-md-2">
+                <label class="form-label">寝室电话</label>
+                <input type="text" class="form-control" name="phone"
+                       value="{{ phone_filter }}"
+                       placeholder="寝室电话">
             </div>
             <div class="col-md-2">
                 <label class="form-label">剩余床位</label>
                 <select class="form-select" name="available_beds">
                     <option value="">全部</option>
-                    <option value="0" {% if request.args.get('available_beds') == '0' %}selected{% endif %}>已满员</option>
-                    <option value="1" {% if request.args.get('available_beds') == '1' %}selected{% endif %}>有床位</option>
-                    <option value="2" {% if request.args.get('available_beds') == '2' %}selected{% endif %}>2个以上</option>
-                    <option value="4" {% if request.args.get('available_beds') == '4' %}selected{% endif %}>4个以上</option>
+                    <option value="0" {% if available_beds_filter == '0' %}selected{% endif %}>已满员</option>
+                    <option value="1" {% if available_beds_filter == '1' %}selected{% endif %}>有床位</option>
+                    <option value="2" {% if available_beds_filter == '2' %}selected{% endif %}>2个以上</option>
+                    <option value="4" {% if available_beds_filter == '4' %}selected{% endif %}>4个以上</option>
                 </select>
             </div>
             <div class="col-md-3">
                 <label class="form-label">住宿费用范围</label>
                 <div class="input-group">
                     <input type="number" class="form-control" name="fee_min"
-                           value="{{ request.args.get('fee_min', '') }}"
+                           value="{{ fee_min }}"
                            placeholder="最低" min="0" step="0.01">
                     <span class="input-group-text">-</span>
                     <input type="number" class="form-control" name="fee_max"
-                           value="{{ request.args.get('fee_max', '') }}"
+                           value="{{ fee_max }}"
                            placeholder="最高" min="0" step="0.01">
                 </div>
             </div>
-            <div class="col-md-3">
+            <div class="col-md-1">
                 <div class="d-flex gap-2">
                     <button type="submit" class="btn btn-primary">
                         <i class="bi bi-search"></i> 查询
